--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -5,6 +5,8 @@ item.villager's heart.name=村人の心臓
 item.rottennoheartdoll.name=心臓のない腐った人形
 item.force_of_red_life.name=赤い生命の力
 item.cookedvillager'smeat.name=焼肉
+item.mendercrystal.name=エンダークリスタル
+item.mendercrystalsingle.name=エンダークリスタル
 
 tile.trte.name=trte
 tile.brof.name=腐った肉塊
