--- a/src/main/resources/assets/tete/lang/en_US.lang
+++ b/src/main/resources/assets/tete/lang/en_US.lang
@@ -12,7 +12,7 @@ item.mvilmete.name=villagers meteo
 
 tile.trte.name=trte
 tile.brof.name=Rotten meat chunks
-
+tile.villdol.name =villager doll
 
 achievement.How about in decoration?=How about in decoration?
 achievement.Villager Eater=Villager Eater
