--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -12,7 +12,7 @@ item.mvilmete.name=村人メテオ
 
 tile.trte.name=trte
 tile.brof.name=腐った肉塊
-
+tile.villdol.name=村人の人形
 
 achievement.How about in decoration?=装飾にいかが？
 achievement.Villager Eater=Villager Eater
