--- a/src/main/resources/assets/tete/lang/en_US.lang
+++ b/src/main/resources/assets/tete/lang/en_US.lang
@@ -30,3 +30,5 @@ achievement.When a villager fall.desc= It's villagers rain
 
 book.ViSu.title=ViSu
 book.Rain village.title=Rain village
+book.rain_of_magic.title=rain of magic
+book.Extvor.title=Extvor
