--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -30,3 +30,5 @@ achievement.When a villager fall.desc=それは村人の雨
 
 book.ViSu.title=ViSu
 book.Rain village.title=村の雨
+book.rain_of_magic.title=魔法の雨
+book.Extvor.title=Extvor
