村人の剣(仮称)の名前決定

--- a/src/main/resources/assets/tete/lang/en_US.lang
+++ b/src/main/resources/assets/tete/lang/en_US.lang
@@ -21,6 +21,7 @@ item.messy.trte powder.name=trte powder
 item.messy.Internal mechanism of blade.name=Internal mechanism of blade
 item.messy.SINAttachment.name=Attachment(Soul inclusion machine)
 item.BaseSword.name=Base sword
+item.Death candle supervise sword.name death candle supervise sword
 
 tile.trte.name=trte
 tile.brof.name=Rotten meat chunks
