--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -21,6 +21,7 @@ item.messy.trte powder.name=trteの粉
 item.messy.Internal mechanism of blade.name=刃の内部機構
 item.messy.SINAttachment.name=刃の付属品(魂封入器)
 item.BaseSword.name=基本の剣
+item.Death candle supervise sword.name=人魂を統べる剣
 
 tile.trte.name=trte
 tile.brof.name=腐った肉塊
