--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -14,7 +14,7 @@ item.messy.Handle.name=柄
 item.messy.SIM.name=魂封入機
 item.messy.IP.name=鉄のパイプ
 item.messy.IrPl.name=鉄のプレート
-item.messy.Conductive line=導線
+item.messy.Conductive line.name=導線
 item.messy.Conductive trte ingot.name=導体化trteインゴット
 item.messy.Conductive trte powder.name=導体化trteの粉
 item.messy.trte powder.name=trteの粉
@@ -22,6 +22,13 @@ item.messy.Internal mechanism of blade.name=刃の内部機構
 item.messy.SINAttachment.name=刃の付属品(魂封入器)
 item.BaseSword.name=基本の剣
 item.Death candle supervise sword.name=人魂を統べる剣
+item.Sliced villagers of meat.name=スライスされた村人の肉
+item.syabusyabu.name=しゃぶしゃぶ
+item.messy.cutter.name=カッター
+item.messy.Tr steel.name=Tr鋼インゴット
+item.messy.Cutter Blade.name=カッターの刃
+item.messy.Iron dust.name=鉄の粉
+item.messy.tr steel dust.name=Tr鋼の粉
 
 tile.trte.name=trte
 tile.brof.name=腐った肉塊
