龍卵の魔塵完成他もろもろ作成

--- a/src/main/resources/assets/tete/lang/ja_JP.lang
+++ b/src/main/resources/assets/tete/lang/ja_JP.lang
@@ -29,6 +29,7 @@ item.messy.Tr steel.name=Tr鋼インゴット
 item.messy.Cutter Blade.name=カッターの刃
 item.messy.Iron dust.name=鉄の粉
 item.messy.tr steel dust.name=Tr鋼の粉
+item.messy.magic dust of dragon egg.name=龍卵の魔塵
 
 tile.trte.name=trte
 tile.brof.name=腐った肉塊
